LabPack/week2/lab9/lab9-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
  labels:
    app: server
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      ports:
        - containerPort: 80
